<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.alencar.jose.layouts.RelativoActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acessar"
        android:id="@+id/btnAcessar"
        android:layout_centerInParent="true"
        android:onClick="logar"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btnAcessar">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvEmptyEmail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/asterisco"
                android:textColor="@color/vermelho"
                android:visibility="gone"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <EditText
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:id="@+id/etEmail"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvEmptyPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/asterisco"
            android:textColor="@color/vermelho"
            android:visibility="gone"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <EditText
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:id="@+id/etPassword"/>
        </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvUsuarioIncorreto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuarioIncorreto"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="@color/vermelho"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/tvCredenciaisInvalidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credenciaisInvalidas"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="@color/vermelho"
            android:visibility="gone"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAcessar"
        android:layout_centerHorizontal="true"
        android:textColor="@color/azul"
        android:layout_marginTop="15dp"
        android:onClick="cadastrar"
        android:text="@string/signup"/>
</RelativeLayout>
